welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:15: error: ';' expected but 'else' found.
	} else {
          ^Balin:19: error: ';' expected but 'else' found.
} else {
  ^